; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/wininet/extr_urlcache.c_cache_entry_exists.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/wininet/extr_urlcache.c_cache_entry_exists.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cache_entry_exists.buf = internal global [10000 x i8] zeroinitializer, align 16
@ERROR_FILE_NOT_FOUND = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [40 x i8] c"GetUrlCacheEntryInfoA returned %x (%u)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*)* @cache_entry_exists to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @cache_entry_exists(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  store i32 10000, i32* %3, align 4
  %5 = load i8*, i8** %2, align 8
  %6 = call i64 @GetUrlCacheEntryInfoA(i8* %5, i8* getelementptr inbounds ([10000 x i8], [10000 x i8]* @cache_entry_exists.buf, i64 0, i64 0), i32* %3)
  store i64 %6, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %13, label %9

9:                                                ; preds = %1
  %10 = call i64 (...) @GetLastError()
  %11 = load i64, i64* @ERROR_FILE_NOT_FOUND, align 8
  %12 = icmp eq i64 %10, %11
  br label %13

13:                                               ; preds = %9, %1
  %14 = phi i1 [ true, %1 ], [ %12, %9 ]
  %15 = zext i1 %14 to i32
  %16 = load i64, i64* %4, align 8
  %17 = call i64 (...) @GetLastError()
  %18 = call i32 @ok(i32 %15, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i64 %16, i64 %17)
  %19 = load i64, i64* %4, align 8
  ret i64 %19
}

declare dso_local i64 @GetUrlCacheEntryInfoA(i8*, i8*, i32*) #1

declare dso_local i32 @ok(i32, i8*, i64, i64) #1

declare dso_local i64 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
